--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turtle Game</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/f/f9/Emoji_u1f422.svg" type="svg/icon">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
